--- a/src/index.html
+++ b/src/index.html
@@ -176,7 +176,7 @@
     <div class="control-pad">
         <div class="container-fluid">
             <div class="row no-gutter">
-                <div class="col-xs-2">
+                <div class="col-xs-3">
                     <button
                         type="button"
                         class="btn btn-default jog-x-minus jog-y-plus"
@@ -186,7 +186,7 @@
                         <i class="fa fa-arrow-circle-up rotate--45deg"></i>
                     </button>
                 </div>
-                <div class="col-xs-2">
+                <div class="col-xs-3">
                     <button
                         type="button"
                         class="btn btn-default jog-y-plus"
@@ -196,7 +196,7 @@
                         Y+
                     </button>
                 </div>
-                <div class="col-xs-2">
+                <div class="col-xs-3">
                     <button
                         type="button"
                         class="btn btn-default jog-x-plus jog-y-plus"
@@ -206,26 +206,7 @@
                         <i class="fa fa-arrow-circle-up rotate-45deg"></i>
                     </button>
                 </div>
-                <div class="col-xs-2">
-                    <button
-                        type="button"
-                        class="btn btn-default g28"
-                        title="G28"
-                        onclick="cnc.sendMove('G28')"
-                    >
-                        G28
-                    </button>
-                </div>
-                <div class="col-xs-2">
-                    <button
-                        type="button"
-                        class="btn btn-default g30"
-                        onclick="cnc.sendMove('G30')"
-                    >
-                        G30
-                    </button>
-                </div>
-                <div class="col-xs-2">
+                <div class="col-xs-3">
                     <button
                         type="button"
                         class="btn btn-default jog-z-plus"
@@ -237,7 +218,7 @@
                 </div>
             </div>
             <div class="row no-gutter">
-                <div class="col-xs-2">
+                <div class="col-xs-3">
                     <button
                         type="button"
                         class="btn btn-default jog-x-minus"
@@ -247,7 +228,7 @@
                         X-
                     </button>
                 </div>
-                <div class="col-xs-2">
+                <div class="col-xs-3">
                     <button
                         type="button"
                         class="btn btn-default jog-xy-zero"
@@ -257,7 +238,7 @@
                         <i class="fa fa-circle-o"></i>
                     </button>
                 </div>
-                <div class="col-xs-2">
+                <div class="col-xs-3">
                     <button
                         type="button"
                         class="btn btn-default jog-x-plus"
@@ -267,39 +248,9 @@
                         X+
                     </button>
                 </div>
-                <div class="col-xs-2">
-                    <button
-                        type="button"
-                        class="btn btn-default jog-x-zero"
-                        title="Move To X Zero (G0 X0)"
-                        onclick="cnc.sendMove('X0')"
-                    >
-                        X0
-                    </button>
-                </div>
-                <div class="col-xs-2">
-                    <button
-                        type="button"
-                        class="btn btn-default jog-y-zero"
-                        title="Move To Y Zero (G0 Y0)"
-                        onclick="cnc.sendMove('Y0')"
-                    >
-                        Y0
-                    </button>
-                </div>
-                <div class="col-xs-2">
-                    <button
-                        type="button"
-                        class="btn btn-default jog-z-zero"
-                        title="Move To Z Zero (G0 Z0)"
-                        onclick="cnc.sendMove('Z0')"
-                    >
-                        Z0
-                    </button>
-                </div>
             </div>
             <div class="row no-gutter">
-                <div class="col-xs-2">
+                <div class="col-xs-3">
                     <button
                         type="button"
                         class="btn btn-default jog-x-minus jog-y-minus"
@@ -309,7 +260,7 @@
                         <i class="fa fa-arrow-circle-down rotate-45deg"></i>
                     </button>
                 </div>
-                <div class="col-xs-2">
+                <div class="col-xs-3">
                     <button
                         type="button"
                         class="btn btn-default jog-y-minus"
@@ -319,7 +270,7 @@
                         Y-
                     </button>
                 </div>
-                <div class="col-xs-2">
+                <div class="col-xs-3">
                     <button
                         type="button"
                         class="btn btn-default jog-x-plus jog-y-minus"
@@ -329,23 +280,7 @@
                         <i class="fa fa-arrow-circle-down rotate--45deg"></i>
                     </button>
                 </div>
-                <div class="col-xs-4">
-                    <select class="form-control" data-name="select-distance">
-                        <option>0.001</option>
-                        <option>0.005</option>
-                        <option>0.01</option>
-                        <option>0.05</option>
-                        <option>0.1</option>
-                        <option>0.5</option>
-                        <option>1</option>
-                        <option>5</option>
-                        <option>10</option>
-                        <option>50</option>
-                        <option>100</option>
-                        <option>500</option>
-                    </select>
-                </div>
-                <div class="col-xs-2">
+                <div class="col-xs-3">
                     <button
                         type="button"
                         class="btn btn-default jog-z-minus"
@@ -355,7 +290,106 @@
                         Z-
                     </button>
                 </div>
+
             </div>
+
+            <div class="row no-gutter">
+                <div class="col-xs-3">
+                    <button
+                        type="button"
+                        class="btn btn-default jog-x-zero"
+                        title="Move To X Zero (G0 X0)"
+                        onclick="cnc.sendMove('X0')"
+                    >
+                        X0
+                    </button>
+                </div>
+                <div class="col-xs-3">
+                    <button
+                        type="button"
+                        class="btn btn-default jog-y-zero"
+                        title="Move To Y Zero (G0 Y0)"
+                        onclick="cnc.sendMove('Y0')"
+                    >
+                        Y0
+                    </button>
+                </div>
+                <div class="col-xs-3">
+                    <button
+                        type="button"
+                        class="btn btn-default jog-z-zero"
+                        title="Move To Z Zero (G0 Z0)"
+                        onclick="cnc.sendMove('Z0')"
+                    >
+                        Z0
+                    </button>
+                </div>   
+            </div>
+
+            <div class="row no-gutter">
+                </div><div class="col-xs-3">
+                    <button
+                        type="button"
+                        class="btn btn-default g28"
+                        title="G28"
+                        onclick="cnc.sendMove('G28')"
+                    >
+                        G28
+                    </button>
+                </div>
+                <div class="col-xs-3">
+                    <button
+                        type="button"
+                        class="btn btn-default g30"
+                        title="G30"
+                        onclick="cnc.sendMove('G30')"
+                    >
+                        G30
+                    </button>
+                </div>
+                <div class="col-xs-3">
+                    <button
+                        type="button"
+                        class="btn btn-default homing"
+                        title="My Homing"
+                        onclick="cnc.controller.command('gcode', 'G92 X0')">
+                        My Homing
+                    </button>
+                </div>
+                <div class="col-xs-3">
+                    <button
+                        type="button"
+                        class="btn btn-default probe"
+                        title="My Probe"
+                        onclick="cnc.controller.command('gcode', 'G92 X0')">
+                        My Probe
+                    </button>
+                </div>
+            </div>
+
+            <div class="col-xs-4">
+                <select class="form-control" data-name="select-distance">
+                    <option>0.001</option>
+                    <option>0.005</option>
+                    <option>0.01</option>
+                    <option>0.05</option>
+                    <option>0.1</option>
+                    <option>0.5</option>
+                    <option>1</option>
+                    <option>5</option>
+                    <option>10</option>
+                    <option>50</option>
+                    <option>100</option>
+                    <option>500</option>
+                </select>
+            </div>
+
+
+
+
+
+
+            
             <div class="row no-gutter bottom-row">
                 <div class="col-xs-4">
                     <button
