Ajustes nos labels de probe e homing

--- a/src/index.html
+++ b/src/index.html
@@ -353,7 +353,7 @@
                         class="btn btn-default homing"
                         title="Homing"
                         onclick="cnc.controller.command('gcode', 'G92 X0')">
-                        My Homing
+                        Homing
                     </button>
                 </div>
                 <div class="col-xs-3">
@@ -362,7 +362,7 @@
                         class="btn btn-default probe"
                         title="Probe"
                         onclick="cnc.controller.command('gcode', 'G91 G38.2 Z-10 F20 G90 G10 L20 P1 Z10 G91 G0 Z4 G90')">
-                        My Probe
+                        Probe
                     </button>
                 </div>
             </div>
