Ajuste de Z zero

--- a/src/index.html
+++ b/src/index.html
@@ -248,6 +248,16 @@
                         X+
                     </button>
                 </div>
+                <div class="col-xs-3">
+                    <button
+                        type="button"
+                        class="btn btn-default jog-z-zero"
+                        title="Move To Z Zero (G0 Z0)"
+                        onclick="cnc.sendMove('Z0')"
+                    >
+                      <i class="fa fa-circle-o"></i>
+                    </button>
+                </div>   
             </div>
             <div class="row no-gutter">
                 <div class="col-xs-3">
@@ -314,16 +324,6 @@
                         Y0
                     </button>
                 </div>
-                <div class="col-xs-3">
-                    <button
-                        type="button"
-                        class="btn btn-default jog-z-zero"
-                        title="Move To Z Zero (G0 Z0)"
-                        onclick="cnc.sendMove('Z0')"
-                    >
-                        Z0
-                    </button>
-                </div>   
             </div>
 
             <div class="row no-gutter">
