--- a/src/index.html
+++ b/src/index.html
@@ -329,7 +329,7 @@
                         type="button"
                         class="btn btn-default homing"
                         title="Homing"
-                        onclick="cnc.controller.command('gcode', 'G92 X0')">
+                        onclick="cnc.controller.command('gcode', '$H; G91 G0 X-369 Y-339; G10 P0 L20 X0 Y0;')">
                         Homing
                     </button>
                 </div>
@@ -345,26 +345,6 @@
             </div>
 
             <div class="row no-gutter">
-                </div><div class="col-xs-2">
-                    <button
-                        type="button"
-                        class="btn btn-default g28"
-                        title="G28"
-                        onclick="cnc.sendMove('G28')"
-                    >
-                        G28
-                    </button>
-                </div>
-                <div class="col-xs-2">
-                    <button
-                        type="button"
-                        class="btn btn-default g30"
-                        title="G30"
-                        onclick="cnc.sendMove('G30')"
-                    >
-                        G30
-                    </button>
-                </div>
                 <div class="col-xs-2">
                     <button
                         type="button"
@@ -392,6 +372,29 @@
                         G92 Z0
                     </button>
                 </div>                
+            </div>
+
+            <div class="row no-gutter">
+                </div><div class="col-xs-2">
+                    <button
+                        type="button"
+                        class="btn btn-default g28"
+                        title="G28"
+                        onclick="cnc.sendMove('G28')"
+                    >
+                        G28
+                    </button>
+                </div>
+                <div class="col-xs-2">
+                    <button
+                        type="button"
+                        class="btn btn-default g30"
+                        title="G30"
+                        onclick="cnc.sendMove('G30')"
+                    >
+                        G30
+                    </button>
+                </div>
             </div>
 
             <div class="col-xs-4">
