Criação de custom homing

--- a/src/index.html
+++ b/src/index.html
@@ -329,7 +329,7 @@
                         type="button"
                         class="btn btn-default homing"
                         title="Homing"
-                        onclick="cnc.controller.command('gcode', '$H; G91; G0 X-369 Y-339; G10 P0 L20 X0 Y0;')">
+                        onclick="cnc.customHoming()">
                         Homing
                     </button>
                 </div>
