--- a/src/index.html
+++ b/src/index.html
@@ -338,7 +338,7 @@
                         type="button"
                         class="btn btn-default probe"
                         title="Probe"
-                        onclick="cnc.controller.command('gcode', 'G91 G38.2 Z-10 F20 G90 G10 L20 P1 Z10 G91 G0 Z4 G90')">
+                        onclick="cnc.customProbe()">
                         Probe
                     </button>
                 </div>
@@ -375,7 +375,7 @@
             </div>
 
             <div class="row no-gutter">
-                </div><div class="col-xs-6">
+                </div><div class="col-xs-4">
                     <button
                         type="button"
                         class="btn btn-default g28"
@@ -385,7 +385,7 @@
                         G28
                     </button>
                 </div>
-                <div class="col-xs-6">
+                <div class="col-xs-4">
                     <button
                         type="button"
                         class="btn btn-default g30"
@@ -393,6 +393,16 @@
                         onclick="cnc.sendMove('G30')"
                     >
                         G30
+                    </button>
+                </div>
+                <div class="col-xs-4">
+                    <button
+                        type="button"
+                        class="btn btn-default g30"
+                        title="Park"
+                        onclick="cnc.customPark()"
+                    >
+                        Park
                     </button>
                 </div>
             </div>
