Ajuste no layout

--- a/src/index.html
+++ b/src/index.html
@@ -398,7 +398,7 @@
                 <div class="col-xs-4">
                     <button
                         type="button"
-                        class="btn btn-default g30"
+                        class="btn btn-default park"
                         title="Park"
                         onclick="cnc.customPark()"
                     >
@@ -406,31 +406,27 @@
                     </button>
                 </div>
             </div>
-
-            <div class="col-xs-4">
-                <select class="form-control" data-name="select-distance">
-                    <option>0.001</option>
-                    <option>0.005</option>
-                    <option>0.01</option>
-                    <option>0.05</option>
-                    <option>0.1</option>
-                    <option>0.5</option>
-                    <option>1</option>
-                    <option>5</option>
-                    <option>10</option>
-                    <option>50</option>
-                    <option>100</option>
-                    <option>500</option>
-                </select>
-            </div>
-
-
-
-
-
-
             
+            <hr>
+
             <div class="row no-gutter bottom-row">
+                <div class="col-xs-4">
+                    <select class="form-control" data-name="select-distance">
+                        <option>0.001</option>
+                        <option>0.005</option>
+                        <option>0.01</option>
+                        <option>0.05</option>
+                        <option>0.1</option>
+                        <option>0.5</option>
+                        <option>1</option>
+                        <option>5</option>
+                        <option>10</option>
+                        <option>50</option>
+                        <option>100</option>
+                        <option>500</option>
+                    </select>
+                </div>
+
                 <div class="col-xs-4">
                     <button
                         type="button"
