--- a/src/index.html
+++ b/src/index.html
@@ -375,7 +375,7 @@
             </div>
 
             <div class="row no-gutter">
-                </div><div class="col-xs-4">
+                </div><div class="col-xs-3">
                     <button
                         type="button"
                         class="btn btn-default g28"
@@ -385,7 +385,7 @@
                         G28
                     </button>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-xs-3">
                     <button
                         type="button"
                         class="btn btn-default g30"
@@ -395,7 +395,7 @@
                         G30
                     </button>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-xs-3">
                     <button
                         type="button"
                         class="btn btn-default park"
@@ -405,6 +405,15 @@
                         Park
                     </button>
                 </div>
+                <div class="col-xs-3">
+                    <button
+                        type="button"
+                        class="btn btn-default unlock"
+                        title="Unlock"
+                        onclick="cnc.customUnlock()">
+                        Unlock
+                    </button>
+                </div>                
             </div>
             
             <hr>
