Criação de reset e unlock

--- a/src/index.html
+++ b/src/index.html
@@ -418,6 +418,10 @@
             
             <hr>
 
+            <div class="row no-gutter">
+
+            </div>
+
             <div class="row no-gutter bottom-row">
                 <div class="col-xs-4">
                     <select class="form-control" data-name="select-distance">
